Fixed navbar spacing issue

--- a/app/assets/stylesheets/styles/base/responsive.scss
+++ b/app/assets/stylesheets/styles/base/responsive.scss
@@ -343,6 +343,9 @@
     display: none;
   }
 
+  #login-navbar {
+    padding-top: 0px !important;
+  }
 
   .search-tabs { display: none !important; }
   .visible-mobile .search-tabs { display: block !important; }
